Add input area to draw specified sigma

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+  <div id="options", style="width: 100%;">
+      <label>Knot to draw: &sigma; = <input type="text" style="width: 70%;" id="map_input"></label>
+      <button id="map_submit" data-target="#map_input">Draw</button>
+  </div>
   <div id="container">
       <svg id="knot-draw" viewBox="-20 -20 40 80">
       </svg>
