--- a/index_mathjs.html
+++ b/index_mathjs.html
@@ -20,6 +20,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.14.2/math.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/regression/1.4.0/regression.min.js'></script>
 
-  <script src="js/index.js"></script>
+  <script src="js/index_mathjs.js"></script>
 </body>
 </html>
