use lalolib, which is about 10x faster

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       </svg>
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.14.2/math.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/regression/1.4.0/regression.min.js'></script>
+  <script src='js/lalolib/lalolib.js'></script>
 
   <script src="js/index.js"></script>
 </body>
