--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <svg id="knot-draw" viewBox="-20 -20 40 80">
       </svg>
   </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.5.0/dist/svg-pan-zoom.min.js"></script>
+   <script src='https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js'></script>
   <script src='js/lalolib/lalolib.js'></script>
 
   <script src="js/index.js"></script>
