no assertion errors? but it still does nothing--no orthogonal face implementation

--- a/orthogonal.html
+++ b/orthogonal.html
@@ -16,9 +16,10 @@
       <svg id="knot-draw" viewBox="-100 -100 200 200">
       </svg>
   </div>
+  <script src="js/lodash.min.js"></script>
   <script src='node_modules/snapsvg/dist/snap.svg-min.js'></script>
   <script src='js/lalolib/lalolib.js'></script>
 
-  <script src="js/index.js"></script>
+  <script src="js/orthogonal.js"></script>
 </body>
 </html>
