add random to orthogonal

--- a/orthogonal.html
+++ b/orthogonal.html
@@ -10,6 +10,7 @@
   <div id="options", style="width: 100%;">
       <label>Knot to draw: &sigma; = <input type="text" style="width: 70%;" id="map_input"></label>
       <button id="map_submit" data-target="#map_input" data-errbox="#map_errbox">Draw</button>
+      <button id="map_random" data-errbox="#map_errbox">Random!</button>
       <span id="map_errbox"></span>
   </div>
   <div id="container">
