--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>KnotDraw Ricci</title>
+  <title>KnotDraw</title>
       <link rel="stylesheet" href="css/style.css">
 </head>
 
