--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <label>Knot to draw: &sigma; = <input type="text" style="width: 70%;" id="map_input"></label>
         <button id="map_submit" data-target="#map_input" data-errbox="#map_errbox">Draw</button>
         <button id="map_random" data-errbox="#map_errbox">Random!</button>
-        <span id="map_errbox"></span><br>
-        <div id="random-settings", style="width: 100%">
+        <br>
+        <div id="random-settings" style="display: inline">
           <label># crossings <input type="number" id="random-ncross" value="20" min="1" max="300"></label>
           <label># components <input type="number" id="random-ncomps" value="0" min="0" max="300"></label>
           <label>type <select id="random-type">
@@ -23,6 +23,7 @@
             <option value="3">Biquartic</option>
           </select></label>
         </div>
+        <span id="map_errbox"></span>
       </div>
     </header>
     <div id="container">
